parser.output
Useless nonterminals

   regularunit
   unitheading
   interfacepart
   implementationpart
   optionalunituseclause
   optionalunitconstantdeclarationpart
   optionalunittypedeclarationpart
   optionalunitvariabledeclarationpart
   optionalunitprocedureandfunctiondeclarationpart


Terminals which are not used

   space
   newline
   tab
   tk_unit
   tk_interface
   tk_implementation
   tk_word
   tk_true
   tk_false
   tk_read
   tk_readln
   tk_write
   tk_writeln
   tk_in


Useless rules

  242 regularunit: unitheading ';' interfacepart implementationpart tk_end '.'

  243 unitheading: tk_unit identifier

  244 interfacepart: tk_interface optionalunituseclause optionalunitconstantdeclarationpart optionalunittypedeclarationpart optionalunitvariabledeclarationpart optionalunitprocedureandfunctiondeclarationpart

  245 implementationpart: tk_implementation optionalunitconstantdeclarationpart optionalunittypedeclarationpart optionalunitvariabledeclarationpart optionalunitprocedureandfunctiondeclarationpart

  246 optionalunituseclause: usesclause
  247                      | /* empty */

  248 optionalunitconstantdeclarationpart: constantdeclarationpart
  249                                    | /* empty */

  250 optionalunittypedeclarationpart: typedeclarationpart
  251                                | /* empty */

  252 optionalunitvariabledeclarationpart: variabledeclarationpart
  253                                    | /* empty */

  254 optionalunitprocedureandfunctiondeclarationpart: procedureandfunctiondeclarationpart
  255                                                | /* empty */


Rules never reduced

   11 quotedcharacterconstant: comilla stringcharacter comilla

   39 procedureandfunctiondeclarationpart: procedureandfunctiondeclarationpart functiondeclaration
   40                                    | procedureandfunctiondeclarationpart proceduredeclaration

   56 stringtypeidentifier: identifier

  104 variabledeclaration: identifierlist ':' type ';'

  105 variablereference: variableidentifier qualifiers

  118 pointerobjectsymbol: '^'

  155 actualparameter: variablereference
  157                | functionidentifier

  196 constants: constant


State 38 conflicts: 17 reduce/reduce
State 85 conflicts: 7 reduce/reduce
State 86 conflicts: 7 reduce/reduce
State 90 conflicts: 26 reduce/reduce
State 128 conflicts: 30 reduce/reduce
State 130 conflicts: 27 reduce/reduce
State 193 conflicts: 2 reduce/reduce
State 195 conflicts: 2 reduce/reduce
State 213 conflicts: 3 reduce/reduce
State 272 conflicts: 6 reduce/reduce
State 276 conflicts: 1 shift/reduce
State 301 conflicts: 1 shift/reduce
State 312 conflicts: 8 reduce/reduce
State 334 conflicts: 14 reduce/reduce
State 355 conflicts: 5 shift/reduce
State 381 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: programheading ';' optionalprogramuseclause block

    2 label: digitsequence

    3 quotedstringconstant: comilla stringcharacter comilla

    4 functionidentifier: identifier

    5 procedureidentifier: identifier

    6 typeidentifier: identifier

    7 structuredtypeidentifier: identifier

    8 pointertypeidentifier: identifier

    9 stringcharacter: anychar
   10                | comilla comilla

   11 quotedcharacterconstant: comilla stringcharacter comilla

   12 constantdeclaration: identifier '=' constant ';'

   13 constant: identifier
   14         | '+' constantidentifier
   15         | '-' constantidentifier
   16         | signednumber
   17         | quotedstringconstant
   18         | quotedcharacterconstant

   19 block: statementpart
   20      | procedureandfunctiondeclarationpart block
   21      | variabledeclarationpart block
   22      | typedeclarationpart block
   23      | constantdeclarationpart block
   24      | labeldeclarationpart

   25 labeldeclarationpart: tk_label labels ';'

   26 labels: label
   27       | label ',' labels

   28 constantdeclarationpart: tk_const constantdeclarations

   29 constantdeclarations: constantdeclaration
   30                     | constantdeclaration constantdeclarations

   31 typedeclarationpart: tk_type typedeclarations

   32 typedeclarations: typedeclaration
   33                 | typedeclaration typedeclarations

   34 variabledeclarationpart: tk_var variabledeclarations

   35 variabledeclarations: variabledeclaration
   36                     | variabledeclaration variabledeclarations

   37 procedureandfunctiondeclarationpart: proceduredeclaration
   38                                    | functiondeclaration
   39                                    | procedureandfunctiondeclarationpart functiondeclaration
   40                                    | procedureandfunctiondeclarationpart proceduredeclaration

   41 statementpart: compoundstatement

   42 typedeclaration: identifier '=' type ';'

   43 type: simpletype
   44     | structuredtype
   45     | pointertype

   46 simpletype: ordinaltype
   47           | realtype
   48           | stringtype

   49 realtype: realtypeidentifier

   50 realtypeidentifier: tk_real

   51 ordinaltype: subrangetype
   52            | enumeratedtype
   53            | ordinaltypeidentifier

   54 stringtype: tk_string '[' sizeattribute ']'
   55           | stringtypeidentifier

   56 stringtypeidentifier: identifier

   57 sizeattribute: unsignednumber

   58 enumeratedtype: '(' identifierlist ')'

   59 subrangetype: constant range_op constant

   60 structuredtype: arraytype
   61               | settype
   62               | filetype
   63               | recordtype
   64               | tk_packed arraytype
   65               | tk_packed settype
   66               | tk_packed filetype
   67               | tk_packed recordtype
   68               | structuredtypeidentifier

   69 arraytype: tk_array '[' indextypes ']' tk_of type

   70 indextypes: indextype
   71           | indextype indextypes

   72 indextype: ordinaltype

   73 recordtype: tk_record tk_end
   74           | tk_record fieldlist tk_end

   75 fieldlist: fixedpart
   76          | fixedpart ';' variantpart
   77          | fixedpart ';' variantpart ';'
   78          | variantpart
   79          | variantpart ';'

   80 fixedpart: fielddeclarations

   81 fielddeclarations: fielddeclaration
   82                  | fielddeclaration ';' fielddeclarations

   83 fielddeclaration: identifierlist ':' type

   84 variantpart: tk_case tagfieldtype tk_of variants
   85            | tk_case identifier ':' tagfieldtype tk_of variants

   86 variants: variant
   87         | variant ';' variants

   88 variant: constants ':' '(' ')'
   89        | constants ':' '(' fieldlist ')'

   90 constants: constant
   91          | constant ',' constants

   92 tagfieldtype: ordinaltypeidentifier

   93 settype: tk_set tk_of ordinaltype

   94 filetype: tk_file
   95         | tk_file tk_of type

   96 pointertype: '^' basetype
   97            | pointertypeidentifier

   98 basetype: typeidentifier

   99 variabledeclaration: identifierlist ':' type ';'

  100 variablereference: variableidentifier
  101                  | variableidentifier qualifiers

  102 identifierlist: identifier
  103               | identifier ',' identifierlist

  104 variabledeclaration: identifierlist ':' type ';'

  105 variablereference: variableidentifier qualifiers

  106 qualifiers: qualifier
  107           | qualifier qualifiers

  108 variableidentifier: identifier

  109 qualifier: index
  110          | fielddesignator
  111          | filebuffersymbol
  112          | pointerobjectsymbol

  113 index: '[' expressions ']'

  114 expressions: expression
  115            | expression ',' expressions

  116 fielddesignator: '.' identifier

  117 filebuffersymbol: '^'

  118 pointerobjectsymbol: '^'

  119 factor: '@' variablereference
  120       | variablereference
  121       | unsignedconstant
  122       | functioncall
  123       | setconstructor
  124       | '(' expression ')'
  125       | tk_not factor

  126 unsignedconstant: unsignednumber
  127                 | quotedstringconstant
  128                 | tk_nil
  129                 | constantidentifier

  130 term: factor
  131     | factor '*' term
  132     | factor '/' term
  133     | factor tk_div term
  134     | factor tk_mod term
  135     | factor tk_and term

  136 simpleexpression: '+' unsignedexpression
  137                 | '-' unsignedexpression
  138                 | unsignedexpression

  139 unsignedexpression: term '+' unsignedexpression
  140                   | term '-' unsignedexpression
  141                   | term tk_or unsignedexpression
  142                   | term

  143 expression: simpleexpression comparison_op simpleexpression
  144           | simpleexpression '=' simpleexpression
  145           | simpleexpression 'in' simpleexpression
  146           | simpleexpression '>' simpleexpression
  147           | simpleexpression '<' simpleexpression
  148           | simpleexpression

  149 functioncall: functionidentifier
  150             | functionidentifier actualparameterlist

  151 actualparameterlist: '(' actualparametergroup ')'

  152 actualparametergroup: actualparameter
  153                     | actualparametergroup ','

  154 actualparameter: expression
  155                | variablereference
  156                | procedureidentifier
  157                | functionidentifier

  158 setconstructor: '[' membergroups ']'

  159 membergroups: membergroup
  160             | membergroups ','

  161 membergroup: expression
  162            | expression range_op expression

  163 statement: label range_op simplestatement
  164          | label range_op structuredstatement
  165          | label range_op
  166          | simplestatement
  167          | structuredstatement
  168          | /* empty */

  169 simplestatement: assignmentstatement
  170                | procedurestatement
  171                | gotostatement

  172 assignmentstatement: variablereference assignment_op expression
  173                    | functionidentifier assignment_op expression

  174 procedurestatement: procedureidentifier
  175                   | procedureidentifier actualparameterlist

  176 gotostatement: tk_goto label

  177 structuredstatement: compoundstatement
  178                    | conditionalstatement
  179                    | repetitivestatement
  180                    | withstatement

  181 compoundstatement: tk_begin statements tk_end

  182 statements: statement
  183           | statements ';'

  184 conditionalstatement: ifstatement
  185                     | casestatement

  186 ifstatement: tk_if expression tk_then statement
  187            | tk_if expression tk_then statement tk_else statement

  188 casestatement: tk_case expression tk_of cases tk_end
  189              | tk_case expression tk_of cases otherwiseclause tk_end
  190              | tk_case expression tk_of cases ';' tk_end
  191              | tk_case expression tk_of cases otherwiseclause ';' tk_end

  192 cases: cases ','
  193      | case

  194 case: constants ':' statement

  195 constants: constants constant
  196          | constant

  197 otherwiseclause: ';' tk_otherwise statement

  198 repetitivestatement: repeatstatement
  199                    | whilestatement
  200                    | forstatement

  201 repeatstatement: tk_repeat statements tk_until expression

  202 whilestatement: tk_while expression tk_do statement

  203 forstatement: tk_for controlvariable assignment_op initialvalue tk_to finalvalue tk_do statement
  204             | tk_for controlvariable assignment_op initialvalue tk_downto finalvalue tk_do statement

  205 controlvariable: variableidentifier

  206 initialvalue: expression

  207 finalvalue: expression

  208 withstatement: tk_with recordvariablereferences tk_do statement

  209 recordvariablereferences: recordvariablereference
  210                         | recordvariablereferences ','

  211 recordvariablereference: variablereference

  212 proceduredeclaration: procedureheading ';' procedurebody ';'

  213 procedurebody: block
  214              | tk_forward
  215              | tk_external

  216 procedureheading: tk_procedure identifier optionalformalparameterlist

  217 optionalformalparameterlist: formalparameterlist
  218                            | /* empty */

  219 functiondeclaration: functionheading ';' functionbody ';'

  220 functionbody: block
  221             | tk_forward
  222             | tk_external

  223 functionheading: tk_function identifier optionalformalparameterlist ':' resulttype

  224 resulttype: ordinaltypeidentifier
  225           | realtypeidentifier
  226           | pointertypeidentifier

  227 formalparameter: parameterdeclaration
  228                | procedureheading
  229                | functionheading

  230 parameterdeclaration: tk_var identifierlist ':' typeidentifier
  231                     | identifierlist ':' typeidentifier

  232 formalparameters: formalparameter ';' formalparameters
  233                 | formalparameter

  234 formalparameterlist: '(' formalparameters ')'

  235 optionalprogramuseclause: usesclause ';'
  236                         | /* empty */

  237 programheading: tk_program identifier optionalprogramheadingparameters

  238 optionalprogramheadingparameters: '(' programparameters ')'
  239                                 | /* empty */

  240 programparameters: identifierlist

  241 usesclause: tk_uses identifierlist


Terminals, with rules where they appear

$end (0) 0
'(' (40) 58 88 89 124 151 234 238
')' (41) 58 88 89 124 151 234 238
'*' (42) 131
'+' (43) 14 136 139
',' (44) 27 91 103 115 153 160 192 210
'-' (45) 15 137 140
'.' (46) 116
'/' (47) 132
':' (58) 83 85 88 89 99 104 194 223 230 231
';' (59) 1 12 25 42 76 77 79 82 87 99 104 183 190 191 197 212 219 232
    235
'<' (60) 147
'=' (61) 12 42 144
'>' (62) 146
'@' (64) 119
'[' (91) 54 69 113 158
']' (93) 54 69 113 158
'^' (94) 96 117 118
'in' (105) 145
error (256)
identifier (258) 4 5 6 7 8 12 13 42 56 85 102 103 108 116 216 223 237
anychar (259) 9
signednumber (260) 16
digitsequence (261) 2
constantidentifier (262) 14 15 129
unsignednumber (263) 57 126
ordinaltypeidentifier (264) 53 92 224
space (265)
newline (266)
tab (267)
comilla (268) 3 10 11
tk_program (269) 237
tk_begin (270) 181
tk_uses (271) 241
tk_unit (272)
tk_interface (273)
tk_implementation (274)
tk_label (275) 25
tk_const (276) 28
tk_type (277) 31
tk_real (278) 50
tk_word (279)
tk_true (280)
tk_false (281)
tk_string (282) 54
tk_packed (283) 64 65 66 67
tk_array (284) 69
tk_record (285) 73 74
tk_end (286) 73 74 181 188 189 190 191
tk_case (287) 84 85 188 189 190 191
tk_otherwise (288) 197
tk_of (289) 69 84 85 93 95 188 189 190 191
tk_set (290) 93
tk_var (291) 34 230
tk_forward (292) 214 221
tk_external (293) 215 222
tk_function (294) 223
tk_procedure (295) 216
tk_file (296) 94 95
tk_goto (297) 176
tk_if (298) 186 187
tk_then (299) 186 187
tk_else (300) 187
tk_repeat (301) 201
tk_until (302) 201
tk_while (303) 202
tk_do (304) 202 203 204 208
tk_for (305) 203 204
tk_to (306) 203
tk_downto (307) 204
tk_with (308) 208
tk_nil (309) 128
tk_read (310)
tk_readln (311)
tk_write (312)
tk_writeln (313)
tk_in (314)
tk_or (315) 141
tk_div (316) 133
tk_mod (317) 134
tk_and (318) 135
tk_not (319) 125
comparison_op (320) 143
assignment_op (321) 172 173 203 204
range_op (322) 59 162 163 164 165


Nonterminals, with rules where they appear

$accept (86)
    on left: 0
program (87)
    on left: 1, on right: 0
label (88)
    on left: 2, on right: 26 27 163 164 165 176
quotedstringconstant (89)
    on left: 3, on right: 17 127
functionidentifier (90)
    on left: 4, on right: 149 150 157 173
procedureidentifier (91)
    on left: 5, on right: 156 174 175
typeidentifier (92)
    on left: 6, on right: 98 230 231
structuredtypeidentifier (93)
    on left: 7, on right: 68
pointertypeidentifier (94)
    on left: 8, on right: 97 226
stringcharacter (95)
    on left: 9 10, on right: 3 11
quotedcharacterconstant (96)
    on left: 11, on right: 18
constantdeclaration (97)
    on left: 12, on right: 29 30
constant (98)
    on left: 13 14 15 16 17 18, on right: 12 59 90 91 195 196
block (99)
    on left: 19 20 21 22 23 24, on right: 1 20 21 22 23 213 220
labeldeclarationpart (100)
    on left: 25, on right: 24
labels (101)
    on left: 26 27, on right: 25 27
constantdeclarationpart (102)
    on left: 28, on right: 23
constantdeclarations (103)
    on left: 29 30, on right: 28 30
typedeclarationpart (104)
    on left: 31, on right: 22
typedeclarations (105)
    on left: 32 33, on right: 31 33
variabledeclarationpart (106)
    on left: 34, on right: 21
variabledeclarations (107)
    on left: 35 36, on right: 34 36
procedureandfunctiondeclarationpart (108)
    on left: 37 38 39 40, on right: 20 39 40
statementpart (109)
    on left: 41, on right: 19
typedeclaration (110)
    on left: 42, on right: 32 33
type (111)
    on left: 43 44 45, on right: 42 69 83 95 99 104
simpletype (112)
    on left: 46 47 48, on right: 43
realtype (113)
    on left: 49, on right: 47
realtypeidentifier (114)
    on left: 50, on right: 49 225
ordinaltype (115)
    on left: 51 52 53, on right: 46 72 93
stringtype (116)
    on left: 54 55, on right: 48
stringtypeidentifier (117)
    on left: 56, on right: 55
sizeattribute (118)
    on left: 57, on right: 54
enumeratedtype (119)
    on left: 58, on right: 52
subrangetype (120)
    on left: 59, on right: 51
structuredtype (121)
    on left: 60 61 62 63 64 65 66 67 68, on right: 44
arraytype (122)
    on left: 69, on right: 60 64
indextypes (123)
    on left: 70 71, on right: 69 71
indextype (124)
    on left: 72, on right: 70 71
recordtype (125)
    on left: 73 74, on right: 63 67
fieldlist (126)
    on left: 75 76 77 78 79, on right: 74 89
fixedpart (127)
    on left: 80, on right: 75 76 77
fielddeclarations (128)
    on left: 81 82, on right: 80 82
fielddeclaration (129)
    on left: 83, on right: 81 82
variantpart (130)
    on left: 84 85, on right: 76 77 78 79
variants (131)
    on left: 86 87, on right: 84 85 87
variant (132)
    on left: 88 89, on right: 86 87
constants (133)
    on left: 90 91 195 196, on right: 88 89 91 194 195
tagfieldtype (134)
    on left: 92, on right: 84 85
settype (135)
    on left: 93, on right: 61 65
filetype (136)
    on left: 94 95, on right: 62 66
pointertype (137)
    on left: 96 97, on right: 45
basetype (138)
    on left: 98, on right: 96
variabledeclaration (139)
    on left: 99 104, on right: 35 36
variablereference (140)
    on left: 100 101 105, on right: 119 120 155 172 211
identifierlist (141)
    on left: 102 103, on right: 58 83 99 103 104 230 231 240 241
qualifiers (142)
    on left: 106 107, on right: 101 105 107
variableidentifier (143)
    on left: 108, on right: 100 101 105 205
qualifier (144)
    on left: 109 110 111 112, on right: 106 107
index (145)
    on left: 113, on right: 109
expressions (146)
    on left: 114 115, on right: 113 115
fielddesignator (147)
    on left: 116, on right: 110
filebuffersymbol (148)
    on left: 117, on right: 111
pointerobjectsymbol (149)
    on left: 118, on right: 112
factor (150)
    on left: 119 120 121 122 123 124 125, on right: 125 130 131 132
    133 134 135
unsignedconstant (151)
    on left: 126 127 128 129, on right: 121
term (152)
    on left: 130 131 132 133 134 135, on right: 131 132 133 134 135
    139 140 141 142
simpleexpression (153)
    on left: 136 137 138, on right: 143 144 145 146 147 148
unsignedexpression (154)
    on left: 139 140 141 142, on right: 136 137 138 139 140 141
expression (155)
    on left: 143 144 145 146 147 148, on right: 114 115 124 154 161
    162 172 173 186 187 188 189 190 191 201 202 206 207
functioncall (156)
    on left: 149 150, on right: 122
actualparameterlist (157)
    on left: 151, on right: 150 175
actualparametergroup (158)
    on left: 152 153, on right: 151 153
actualparameter (159)
    on left: 154 155 156 157, on right: 152
setconstructor (160)
    on left: 158, on right: 123
membergroups (161)
    on left: 159 160, on right: 158 160
membergroup (162)
    on left: 161 162, on right: 159
statement (163)
    on left: 163 164 165 166 167 168, on right: 182 186 187 194 197
    202 203 204 208
simplestatement (164)
    on left: 169 170 171, on right: 163 166
assignmentstatement (165)
    on left: 172 173, on right: 169
procedurestatement (166)
    on left: 174 175, on right: 170
gotostatement (167)
    on left: 176, on right: 171
structuredstatement (168)
    on left: 177 178 179 180, on right: 164 167
compoundstatement (169)
    on left: 181, on right: 41 177
statements (170)
    on left: 182 183, on right: 181 183 201
conditionalstatement (171)
    on left: 184 185, on right: 178
ifstatement (172)
    on left: 186 187, on right: 184
casestatement (173)
    on left: 188 189 190 191, on right: 185
cases (174)
    on left: 192 193, on right: 188 189 190 191 192
case (175)
    on left: 194, on right: 193
otherwiseclause (176)
    on left: 197, on right: 189 191
repetitivestatement (177)
    on left: 198 199 200, on right: 179
repeatstatement (178)
    on left: 201, on right: 198
whilestatement (179)
    on left: 202, on right: 199
forstatement (180)
    on left: 203 204, on right: 200
controlvariable (181)
    on left: 205, on right: 203 204
initialvalue (182)
    on left: 206, on right: 203 204
finalvalue (183)
    on left: 207, on right: 203 204
withstatement (184)
    on left: 208, on right: 180
recordvariablereferences (185)
    on left: 209 210, on right: 208 210
recordvariablereference (186)
    on left: 211, on right: 209
proceduredeclaration (187)
    on left: 212, on right: 37 40
procedurebody (188)
    on left: 213 214 215, on right: 212
procedureheading (189)
    on left: 216, on right: 212 228
optionalformalparameterlist (190)
    on left: 217 218, on right: 216 223
functiondeclaration (191)
    on left: 219, on right: 38 39
functionbody (192)
    on left: 220 221 222, on right: 219
functionheading (193)
    on left: 223, on right: 219 229
resulttype (194)
    on left: 224 225 226, on right: 223
formalparameter (195)
    on left: 227 228 229, on right: 232 233
parameterdeclaration (196)
    on left: 230 231, on right: 227
formalparameters (197)
    on left: 232 233, on right: 232 234
formalparameterlist (198)
    on left: 234, on right: 217
optionalprogramuseclause (199)
    on left: 235 236, on right: 1
programheading (200)
    on left: 237, on right: 1
optionalprogramheadingparameters (201)
    on left: 238 239, on right: 237
programparameters (202)
    on left: 240, on right: 238
usesclause (203)
    on left: 241, on right: 235


state 0

    0 $accept: . program $end

    tk_program  shift, and go to state 1

    program         go to state 2
    programheading  go to state 3


state 1

  237 programheading: tk_program . identifier optionalprogramheadingparameters

    identifier  shift, and go to state 4


state 2

    0 $accept: program . $end

    $end  shift, and go to state 5


state 3

    1 program: programheading . ';' optionalprogramuseclause block

    ';'  shift, and go to state 6


state 4

  237 programheading: tk_program identifier . optionalprogramheadingparameters

    '('  shift, and go to state 7

    $default  reduce using rule 239 (optionalprogramheadingparameters)

    optionalprogramheadingparameters  go to state 8


state 5

    0 $accept: program $end .

    $default  accept


state 6

    1 program: programheading ';' . optionalprogramuseclause block

    tk_uses  shift, and go to state 9

    $default  reduce using rule 236 (optionalprogramuseclause)
